# blockchain_lab

./: .gitignore  Cargo.toml  README.md
core/: .gitignore  Cargo.toml
core/src/: config.rs  lib.rs  main.rs
core/src/api/: cli.rs  mod.rs
core/src/consensus/: mod.rs  pow.rs  traits.rs  validator.rs
core/src/crypto/: address.rs  hash.rs  merkle.rs  mod.rs  signature.rs
core/src/execution/: mempool.rs  mod.rs  transaction.rs  utxo.rs
core/src/network/: message.rs  mod.rs  node.rs  server.rs
core/src/primitives/: block.rs  blockchain.rs  mod.rs
core/src/storage/: mod.rs
core/src/wallet/: mod.rs  wallet.rs  wallets.rs
docs/comparisons/: block-structure.md  consensus.md  cryptography.md  data-model.md
implementations/aptos/: Cargo.toml
implementations/aptos/src/: account.rs  aptos_bft.rs  block_stm.rs  lib.rs
implementations/avalanche/: Cargo.toml
implementations/avalanche/src/: lib.rs  snowball.rs  subnet.rs  validator.rs
implementations/bitcoin/: Cargo.toml
implementations/bitcoin/src/: consensus.rs  crypto.rs  lib.rs
implementations/cardano/: Cargo.toml
implementations/cardano/src/: eutxo.rs  lib.rs  ouroboros.rs  plutus.rs
implementations/cosmos/: Cargo.toml
implementations/cosmos/src/: abci.rs  consensus.rs  lib.rs  types.rs
implementations/ethereum/: Cargo.toml
implementations/ethereum/src/: consensus.rs  execution.rs  lib.rs  state.rs
implementations/kaspa/: Cargo.toml
implementations/kaspa/src/: consensus.rs  dag.rs  lib.rs
implementations/monero/: Cargo.toml
implementations/monero/src/: cryptonote.rs  lib.rs  ringct.rs  stealth.rs
implementations/polkadot/: Cargo.toml
implementations/polkadot/src/: babe.rs  grandpa.rs  lib.rs  parachain.rs  xcm.rs
implementations/solana/: Cargo.toml
implementations/solana/src/: account.rs  consensus.rs  lib.rs  program.rs  runtime.rs
implementations/sui/: Cargo.toml
implementations/sui/src/: lib.rs  mysticeti.rs  object.rs  ptb.rs
