[package]
name = "blockchain-lab-core"
version = "0.1.0"
edition = "2021"
authors = ["Educational Blockchain Project"]
description = "Core blockchain primitives and shared components for blockchain_lab"

[dependencies]
# Cryptography
ring = "0.16.20"
ripemd = "0.1"
digest = "0.10"

# Encoding
data-encoding = "2.3.2"
bs58 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"

# Math (for PoW target comparison)
num-bigint = "0.4.3"

# Storage
sled = "0.34.7"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0"
