[package]
name = "blockchain-lab-bitcoin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Bitcoin-style blockchain implementation for comparison study"

[dependencies]
blockchain-lab-core.workspace = true
serde.workspace = true
sha2.workspace = true
ripemd.workspace = true
num-bigint.workspace = true
log.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
