[package]
name = "blockchain-lab-cardano"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cardano-style (Ouroboros PoS, eUTXO, Plutus) blockchain implementation for comparison study"

[dependencies]
blockchain-lab-core.workspace = true
serde.workspace = true
sha2.workspace = true
rand.workspace = true
log.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
