[package]
name = "blockchain-lab-ethereum"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Ethereum-style (Account model, PoS) blockchain implementation for comparison study"

[dependencies]
blockchain-lab-core.workspace = true
serde.workspace = true
sha2.workspace = true
num-bigint.workspace = true
log.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
