[package]
name = "blockchain-lab-kaspa"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Kaspa-style (GHOSTDAG/BlockDAG) blockchain implementation for comparison study"

[dependencies]
blockchain-lab-core.workspace = true
serde.workspace = true
sha2.workspace = true
num-bigint.workspace = true
log.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
