[package]
name = "blockchain-lab-polkadot"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Polkadot-style (BABE+GRANDPA, Relay Chain+Parachains, XCM) blockchain implementation for comparison study"

[dependencies]
blockchain-lab-core.workspace = true
serde.workspace = true
sha2.workspace = true
rand.workspace = true
log.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
