[package]
name = "blockchain-lab-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Solana-style (Account model, PoH + Tower BFT) blockchain implementation for comparison study"

[dependencies]
blockchain-lab-core.workspace = true
serde.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
bs58.workspace = true
log.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
