[package]
name = "blockchain-lab-sui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Sui-style (Mysticeti + Object-centric + PTB) blockchain implementation for comparison study"

[dependencies]
blockchain-lab-core.workspace = true
serde.workspace = true
sha2.workspace = true
rand.workspace = true
log.workspace = true
hex.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
